fix: log용 설정